--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,10 +2,16 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,regular,500,700);
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 50px;
     font-family: 'Ubuntu', sans-serif;
 }
 
 .header {
+    width: 100%;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,7 +32,9 @@ body {
 }
 
 .form {
-    display: flex; 
+    display: flex;
+    justify-content: space-between;
+    width: 460px;
     height: 54px;
     background: #ffffff;
     border-radius: 6px;
@@ -34,6 +42,8 @@ body {
 }
 
 .input {
+    padding: 15px;
+    flex-grow: 1;
     font-weight: 300;
     font-size: 20px;
     line-height: 1;
@@ -52,4 +62,66 @@ body {
     line-height: 1;
     color: #ffffff;
 
+    transition: background-color 0.2s ease-in;
+
+}
+
+.btn:hover {
+    background: #ee3939;
+}
+
+.card {
+    position: relative;
+    padding: 30px;
+    width: 360px;
+    background-color: #ffffff;
+    border-radius: 6px;
+    box-shadow: 0px 5px 20px rgba(27, 108, 114, 0.25);
+
+}
+
+.card:before {
+    position: absolute;
+    left: 10px;
+    bottom: -10px;
+    z-index: -1;
+    content: "";
+    height: 100%;
+    width: calc(100% - 20px);
+    background-color: #ffffff;
+    border-radius: 6px;
+    box-shadow: 0px 5px 20px rgba(27, 108, 114, 0.25);
+
+}
+
+.card-city {
+    font-family: 'Ubuntu';
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 33px;
+    color:#000000;
+}
+
+.card-city span {
+    display: inline-block;
+    padding: 3px 5px;
+    background:#e5464f;
+    border-radius: 6px;
+
+
+}
+
+.card-weather {
+
+}
+
+.card-value {
+
+}
+.card-img {
+
+}
+
+.card-desc {
+    
 }
