--- a/src/css/main.css
+++ b/src/css/main.css
@@ -81,7 +81,7 @@ body {
     flex-direction: column;
     row-gap: 20px;
     padding: 30px;
-    width: 360px;
+    min-width: 360px;
     background-color: #ffffff;
     border-radius: 6px;
     box-shadow: 0px 5px 20px rgba(27, 108, 114, 0.25);
