--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,15 @@
 @import "./reset.css";
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,regular,500,700);
 
+@font-face {
+	font-family: 'Ubuntu';
+	src: url('../fonts/Ubuntu-Regular.ttf');
+	src: local('Ubuntu-Regular'), local('Ubuntu-Medium'),
+		url('../fonts/Ubuntu-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
 body {
     display: flex;
     flex-direction: column;
