--- a/src/css/main.css
+++ b/src/css/main.css
@@ -156,6 +156,11 @@ body {
     object-fit: contain;
 }
 
+.img-map {
+    max-width: 100%;
+    object-fit: contain;
+}
+
 .card-desc {
     font-size: 20px;
     line-height: 1.2;
